# workshop_fastapi_auth

./: pyproject.toml
app/: main.py
app/core/: config.py  crud.py  db.py  deps.py  models.py  schemas.py  security.py
core/: config.py
